final wihtout docker
