# api/docs/swagger.json
@@ -328,18 +328,21 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "user"
                 ],
                 "summary": "Reset user password",
                 "parameters": [
                     {
-                        "description": "Reset code data",
-                        "name": "resetCode",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/genproto.UsersResetPassword"
-                        }
+                        "type": "string",
+                        "description": "ResetToken",
+                        "name": "reset_token",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "NewPassword",
+                        "name": "new_password",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -553,17 +556,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "genproto.UsersResetPassword": {
-            "type": "object",
-            "properties": {
-                "new_password": {
-                    "type": "string"
-                },
-                "reset_token": {
                     "type": "string"
                 }
             }
